springboot_oracle mvn

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=springboot_oracle
+spring.port=8002
 
-spring.datasource.url=jdbc:oracle:thin:@10.70.10.153:1521/XEPDB1
+spring.datasource.url=jdbc:oracle:thin:@192.168.122.1:1521/XEPDB1
 spring.datasource.username=appuser
 spring.datasource.password=Wanto1234
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
