--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.application.name=springboot_oracle
+spring.application.name=${SPRING_APPLICATION_NAME:springboot_oracle}
 
-spring.datasource.url=jdbc:oracle:thin:@192.168.122.1:1521/XEPDB1
-spring.datasource.username=appuser
-spring.datasource.password=Wanto1234
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:oracle:thin:@192.168.122.1:1521/XEPDB1}
+spring.datasource.username=${ORACLE_USERNAME:appuser}
+spring.datasource.password=${ORACLE_PASSWORD:Wanto1234}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:oracle.jdbc.OracleDriver}
 
 # Hibernate / JPA
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.OracleDialect}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:"true"}
 
